words + refinement left

--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa0ac9e6",
+   "id": "f2a0032c",
    "metadata": {},
    "source": [
     "# Le plan: \n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d7653a3",
+   "id": "c9735eba",
    "metadata": {},
    "source": [
     "# 1. Intro du sujet: TODO"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28fdb3c1",
+   "id": "1699fef9",
    "metadata": {},
    "source": [
     "# 2. Our goal:\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b58320",
+   "id": "38e80891",
    "metadata": {},
    "source": [
     "# 3. How we achieve that:\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d51d08",
+   "id": "e9392c0b",
    "metadata": {},
    "source": [
     "# 4. But more precisely, what did you do?:"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "617d54e8",
+   "id": "2763e549",
    "metadata": {},
    "source": [
     "### 4.1: data-extension\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4dfea30d",
+   "id": "30d490d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "118ab205",
+   "id": "cb0f3da9",
    "metadata": {},
    "source": [
     "As you can see, the owners of the media are not indicated here, so we need to extend our dataset with these features.  \n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "703511c5",
+   "id": "e02032bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820d8022",
+   "id": "f5652123",
    "metadata": {},
    "source": [
     "### 4.2: Data processing?\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5080bc33",
+   "id": "bd5c6c04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1289bd86",
+   "id": "21e75c69",
    "metadata": {},
    "source": [
     "For both these features, we will first use the [Term Frequency-Inverse Document Frequency](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) method (TF-IDF for short) (**todo: better name?**) before proceeding to further analysis.  \n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36ec1cf0",
+   "id": "b310d3b6",
    "metadata": {},
    "source": [
     "**TODO: maybe a bit long?**\n",
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0ab791e3",
+   "id": "48ec21f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c56e0e0c",
+   "id": "283b8ea4",
    "metadata": {},
    "source": [
     "### 4.3: Data analysis (the heart of our problem)\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fe1fbe38",
+   "id": "1164d5ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02804d5d",
+   "id": "5d75a4a8",
    "metadata": {},
    "source": [
-    "Let us apply this technique on the speakers matrix first."
+    "#### 4.3.1: Let us apply this technique on the speakers matrix first."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2e13e6f6",
+   "id": "0e3bd556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3c46aa2",
+   "id": "0d63082a",
    "metadata": {},
    "source": [
     "Using the top speakers per axe, we identify the *topics* of the axes:\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb456a12",
+   "id": "cc297e73",
    "metadata": {},
    "source": [
     "Then let us see if we can differentiate the media *inside one country!*. We will focus on the USA since it is the country with the most data available"
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c1c7b866",
+   "id": "ac28691d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7191b87",
+   "id": "830b6715",
    "metadata": {},
    "source": [
     "Again we can try and extract the *topics* from the list of top speakers per axe:\n",
@@ -300,8 +300,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "bbdbbc6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# les nouveaux plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70efeca1",
+   "metadata": {},
+   "source": [
+    "Clearly we can spot some clusters when projecting on the first few axes. The purple and yellow ones are especially well separated. \n",
+    "**TODO: j'ai des pb pour run avec le .csv, donc je peux notamment pas voir à quel groupe ou quel topic ça correspond**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51d27244",
+   "metadata": {},
+   "source": [
+    "**TODO:** semi-conclusion on the efficiency of this technique."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "751981b0",
+   "metadata": {},
+   "source": [
+    "#### 4.3.2: Now let us apply this technique on the words' matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ad44ed3f",
+   "id": "7a856996",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -309,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3253591d",
+   "id": "441da4f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -317,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee5fba3",
+   "id": "9da8b604",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -325,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea4465ac",
+   "id": "4b9cb364",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -333,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9916f6a",
+   "id": "c1276a6d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -341,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2cecc4f",
+   "id": "8d163d2d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -349,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6a1535",
+   "id": "9c80b9c7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -357,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce7c3d03",
+   "id": "bb837df9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -365,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7d2a94f",
+   "id": "7795f46b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -373,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2677be7f",
+   "id": "5c4fa19f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -381,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2528093b",
+   "id": "236c4d15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -389,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4057c33f",
+   "id": "6ac54a44",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -397,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c939e6b6",
+   "id": "021ad790",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -405,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d19be60",
+   "id": "ddeb6e3d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -413,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "809f4f46",
+   "id": "2c66c188",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -421,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2460d07",
+   "id": "e344d85b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -429,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4f09f9d",
+   "id": "c39b36be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -437,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ed51b6",
+   "id": "8b487f1b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -445,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15fd50ab",
+   "id": "60d36764",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -453,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93e6c38c",
+   "id": "463a853f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -461,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5db9e5f8",
+   "id": "cebbfd95",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -469,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2232fd9",
+   "id": "ccf226e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -477,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9155a62",
+   "id": "c945f257",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c6714a7",
+   "id": "c0e300b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -493,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "910b2d3a",
+   "id": "6f3484c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -501,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6eca78",
+   "id": "0def0620",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -509,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00398eb7",
+   "id": "44dced9e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -517,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "625ab823",
+   "id": "6aa313f1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -525,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee48f12",
+   "id": "d0d2bac4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -533,31 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0572f4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "318c1fdc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88038153",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d1b57ce",
+   "id": "7de31967",
    "metadata": {},
    "outputs": [],
    "source": []
