--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -69,7 +69,10 @@
    "id": "e9392c0b",
    "metadata": {},
    "source": [
-    "# 4. But more precisely, what did you do?:"
+    "# 4. But more precisely, what did you do?:\n",
+    "**TODO: est-ce qu'on veut tenter du test-training? parce que jusqu'ici on ne fait que du training, et je me demande s'ils vontvouloir pénaliser ça.**\n",
+    "\n",
+    "**TODO sur les graphes préciser que l'axe indiqué en premier correspond aux abscisses."
    ]
   },
   {
@@ -245,7 +248,9 @@
    "id": "0d63082a",
    "metadata": {},
    "source": [
-    "Using the top speakers per axe, we identify the *topics* of the axes:\n",
+    "Using the top speakers per axe, we identify the *topics* of the axes:  \n",
+    "**TODO: we have min and max, but isn't the axis's name base on max ?**\n",
+    "**e.g. first axis is \"speaker frequency\"\n",
     "\n",
     "| Axis | Max                 | Min                     |\n",
     "|------|---------------------|-------------------------|\n",
@@ -330,48 +335,74 @@
    "id": "751981b0",
    "metadata": {},
    "source": [
-    "#### 4.3.2: Now let us apply this technique on the words' matrix."
+    "#### 4.3.2: \n",
+    "Now let us apply this technique on the words' matrix (constructed with the words from the quotes).  \n",
+    "For starters we will consider all the quotes, and not only the ones in US newspapers. We expect there is still some geographical distinction --due for example to cultural differences, or diverging points of interest (e.g. American football is popular in the USA, but not much in other English speaking countries)--  \n",
+    "\n",
+    "But we don't expect them to be as obvious as with the speakers' matrix, since we expect more recoupement between journals of different countries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7a856996",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Illustration des projections qu'on obtient\n",
+    "\n",
+    "# ptetre un zoom sur le 0-4? ou un où on voit le mieux une séparation"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "441da4f4",
+   "cell_type": "markdown",
+   "id": "4a6b7da5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### TODO: why is it called \"US health\" and not just \"health\" in the notebook \"Analysis\"?\n",
+    "\n",
+    "Again, using the top words per axe we can identify the topics corresponding to the axes:\n",
+    "\n",
+    "| Axis | Max            | Min                   |\n",
+    "|------|----------------|-----------------------|\n",
+    "| 0    | Frequent words | Non frequent words    |\n",
+    "| 1    | Sport          | US health             |\n",
+    "| 2    | UK **TODO: verify**             | Not clear. Some terms relatedto music though|\n",
+    "| 3    | Music          | Sports                |\n",
+    "| 4    | Canada         | US politics **TODO: verify**           |\n",
+    "\n",
+    "Our hypothesis seems verified, as there are still some geographical distinctions, but not as obvious from the graphs[^1], or as numerous as previously.  \n",
+    "\n",
+    "[^1]: groups of points of one particular color, i.e. corresponding to one consortium in particular are not as obvious when projected on 2 axes, although some still appear (e.g. strange green **TODO** color on projection on axes 0-4)."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9da8b604",
+   "cell_type": "markdown",
+   "id": "83ab835b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We now focus only on the USA again:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4b9cb364",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Illustration des graphes avec les USA.\n",
+    "\n",
+    "# zoom sur 0-4 par ex (pour les vert fluo, qui doivent correspondre à Townsquare Media)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1276a6d",
+   "cell_type": "markdown",
+   "id": "5cacb07f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Once again, we try and identify the topics corresponding to t"
+   ]
   },
   {
    "cell_type": "code",
@@ -528,6 +559,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1aec0e39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcc31f3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa95dcf8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6dea9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6f3484c4",
    "metadata": {},
    "outputs": [],
@@ -576,9 +639,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -590,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
