refining intro, need talk corona

--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -51,12 +51,18 @@
     "\n",
     "\\[For a detailed description of the process, keep reading, or better, go see our [notebook](https://github.com/epfl-ada/ada-2021-project-mahj)\\].\n",
     "\n",
+    "### 3.1: Overview of the process\n",
     "\n",
     "We need some *features* which allow us to distinguish between diferent media. To do so we use the [Quotebank](https://dlab.epfl.ch/people/west/pub/Vaucher-Spitz-Catasta-West_WSDM-21.pdf) database, which is a dataset of  speaker-attributed quotations that were extracted from diverse English news articles[^1].\n",
     "\n",
     "[^1]: https://zenodo.org/record/4277311\n",
     "\n",
     "We then augment this dataset using [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) to get the features we deemed necessary for our analysis.\n",
+    "\n",
+    "### 3.2: Explanation of some of our choices (**TODO: and limitations?**)\n",
+    "We have chosen to only focus on one year (namely 2020), as we expect the topics of interest, as well as the prominent people to vary from one year to another.  \n",
+    "We expect basically all the media to talk about the coronavirus, so we don't expect this subject to be a \"recognizing/dividing\" criterion. We will have to make sure it does not overshadow other criteria. \"blabla mitigate\"\n",
+    "\n",
     "\n",
     "**TODO: commenter la taille  É N O R M E  du dataset qu'on a?**  \n",
     "**TODO: refine last paragraph**\n",
@@ -70,7 +76,8 @@
    "metadata": {},
    "source": [
     "# 4. But more precisely, what did you do?:\n",
-    "**TODO: est-ce qu'on veut tenter du test-training? parce que jusqu'ici on ne fait que du training, et je me demande s'ils vontvouloir pénaliser ça.**\n",
+    "**TODO: est-ce qu'on veut tenter du test-training? parce que jusqu'ici on ne fait que du training, et je me demande s'ils vont vouloir pénaliser ça.**  \n",
+    "**TODO: ptetre train sur les $x$ premiers mois, puis test sur les $12-x$ derniers mois, comme ça on justifie l'utilité: en s'entraînant avec la data du début de l'année on a des résultats pour la fin de l'année.**. Pb avec ça: yearly events\n",
     "\n",
     "**TODO sur les graphes préciser que l'axe indiqué en premier correspond aux abscisses."
    ]
@@ -126,12 +133,12 @@
    "id": "f5652123",
    "metadata": {},
    "source": [
-    "### 4.2: Data processing?\n",
+    "### 4.2: Data processing[^1]?\n",
     "Since for each we have both quotes, and quotees (i.e. the people quoted), it seems natural to try and cluster them according to these 2 features. Let us then try 2 different methods:\n",
     " * First, cluster according to which speakers are cited in it.\n",
     " * Second, cluster according to the text content of the extracted quotes.\n",
     " \n",
-    "**TODO: see file \"Process_data.ipynb\" for more details**\n",
+    "**TODO: **\n",
     "**TODO: do we speak about the distance metrics?**"
    ]
   },
@@ -230,7 +237,8 @@
    "id": "5d75a4a8",
    "metadata": {},
    "source": [
-    "#### 4.3.1: Let us apply this technique on the speakers matrix first."
+    "#### 4.3.1: The speakers\n",
+    "Let us apply this technique on the speakers matrix first."
    ]
   },
   {
@@ -335,7 +343,8 @@
    "id": "751981b0",
    "metadata": {},
    "source": [
-    "#### 4.3.2: \n",
+    "#### 4.3.2:  The quotes\n",
+    "\n",
     "Now let us apply this technique on the words' matrix (constructed with the words from the quotes).  \n",
     "For starters we will consider all the quotes, and not only the ones in US newspapers. We expect there is still some geographical distinction --due for example to cultural differences, or diverging points of interest (e.g. American football is popular in the USA, but not much in other English speaking countries)--  \n",
     "\n",
@@ -356,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6b7da5",
+   "id": "65716287",
    "metadata": {},
    "source": [
     "#### TODO: why is it called \"US health\" and not just \"health\" in the notebook \"Analysis\"?\n",
@@ -366,19 +375,24 @@
     "| Axis | Max            | Min                   |\n",
     "|------|----------------|-----------------------|\n",
     "| 0    | Frequent words | Non frequent words    |\n",
-    "| 1    | Sport          | US health             |\n",
-    "| 2    | UK **TODO: verify**             | Not clear. Some terms relatedto music though|\n",
+    "| 1    | Sports[^1]     | US health             |\n",
+    "| 2    | UK **TODO: verify**             | Not clear. Some terms related to music though|\n",
     "| 3    | Music          | Sports                |\n",
     "| 4    | Canada         | US politics **TODO: verify**           |\n",
     "\n",
-    "Our hypothesis seems verified, as there are still some geographical distinctions, but not as obvious from the graphs[^1], or as numerous as previously.  \n",
+    "Our hypothesis seems verified, as there are still some geographical distinctions, but not as obvious from the graphs[^2], or as numerous as previously.  \n",
     "\n",
-    "[^1]: groups of points of one particular color, i.e. corresponding to one consortium in particular are not as obvious when projected on 2 axes, although some still appear (e.g. strange green **TODO** color on projection on axes 0-4)."
+    "**TODO: voir si ce que je dis sur le corona tient la route**  \n",
+    "Note the subhect \"US health\" that we identified as a min. It is to be expected, because \n",
+    "**TODO: a word on why \"Sports\" is both a min and a max on different axes**  \n",
+    "\n",
+    "[^1]:we hypothesize American football in particular, but are not 100% certain.  \n",
+    "[^2]: groups of points of one particular color, i.e. corresponding to one consortium in particular are not as obvious when projected on 2 axes, although some still appear (e.g. strange green **TODO** color on projection on axes 0-4)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "83ab835b",
+   "id": "c25d1846",
    "metadata": {},
    "source": [
     "We now focus only on the USA again:"
@@ -398,43 +412,76 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cacb07f",
+   "id": "f09682eb",
    "metadata": {},
    "source": [
-    "Once again, we try and identify the topics corresponding to t"
+    "As always, we try and identify the topics corresponding to the first axes:\n",
+    "\n",
+    "| Axis | Max                   | Min                |\n",
+    "|------|-----------------------|--------------------|\n",
+    "| 0    | Frequent words        | Non frequent words |\n",
+    "| 1    | Sports                 | Public health      |\n",
+    "| 2    | Music                 | Sports              |\n",
+    "| 3    | Local / State related | presidential/political **TODO: verify**       |\n",
+    "| 4    | ~Montana state        | not clear **TODO: verify**          |\n",
+    "\n",
+    "As you can see, they are similar to the previous ones --with unsurprisingly no \"country separation axis\" anymore."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf89521e",
+   "metadata": {},
+   "source": [
+    "Visually, the bright green points really stand out.  \n",
+    "Can you guess to which journal they correspond?\n",
+    "\n",
+    "<details>\n",
+    "  <summary>Click to reveal</summary>\n",
+    "  \n",
+    "  Once again, it is Townsquare media which stands out. That's interesting: it is not only divergent with respect to its choice of speaker, but also w.r.t. the subjects it treats.  \n",
+    "  We hypothesize it is so particular because it is composed of many *local radio stations*.\n",
+    "  Once more we will remove them to refine our analysis.\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03247224",
+   "metadata": {},
+   "source": [
+    "Let us remove this consortium from the analysis once again, and see what results we get:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8d163d2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c80b9c7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bb837df9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# illustration of analysis on words, USA, without Townsquare\n",
+    "\n",
+    "# zoom on 2-4 (yellow), and maybe 0-2(pale green)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7795f46b",
+   "cell_type": "markdown",
+   "id": "041e9aa2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The axes we identify are as follow:\n",
+    "\n",
+    "| Axis | Max                   | Min                |\n",
+    "|------|-----------------------|--------------------|\n",
+    "| 0    | Frequent words        | Non frequent words |\n",
+    "| 1    | Sport                 | Public health      |\n",
+    "| 2    | Music                 | Sport              |\n",
+    "| 3    | Local / State related | Country wide       |\n",
+    "| 4    | Election              | Covid              |\n",
+    "\n",
+    "We can note than axis 0, 1 and 2 are identic as with the Townsquare media group. Axis 3 is quite similar but less focused on a specific state."
+   ]
   },
   {
    "cell_type": "code",
@@ -559,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aec0e39",
+   "id": "6603cade",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -567,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc31f3d",
+   "id": "e942ca62",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -575,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa95dcf8",
+   "id": "91fcf2fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -583,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6dea9e6",
+   "id": "4071edab",
    "metadata": {},
    "outputs": [],
    "source": []
