--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -47,9 +47,8 @@
    "id": "38e80891",
    "metadata": {},
    "source": [
-    "# 3. How we achieve that:\n",
-    "\n",
-    "\\[For a detailed description of the process, keep reading, or better, go see our [notebook](https://github.com/epfl-ada/ada-2021-project-mahj)\\].\n",
+    "# 3. How we achieve that[^1]:\n",
+    "[^1]: For a detailed description of the process, keep reading, or better, go see our [notebook](https://github.com/epfl-ada/ada-2021-project-mahj)\n",
     "\n",
     "### 3.1: Overview of the process\n",
     "\n",
@@ -59,15 +58,16 @@
     "\n",
     "We then augment this dataset using [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) to get the features we deemed necessary for our analysis.\n",
     "\n",
+    "**TODO?: refine this parag**\n",
+    "Finally after getting all those features, we use [Natural language processing](https://en.wikipedia.org/wiki/Natural_language_processing)-techniques (or NLP) to analyze our data, and understand the obtained results.  \n",
+    "\n",
     "### 3.2: Explanation of some of our choices (**TODO: and limitations?**)\n",
-    "We have chosen to only focus on one year (namely 2020), as we expect the topics of interest, as well as the prominent people to vary from one year to another.  \n",
-    "We expect basically all the media to talk about the coronavirus, so we don't expect this subject to be a \"recognizing/dividing\" criterion. We will have to make sure it does not overshadow other criteria. \"blabla mitigate\"\n",
+    "We have chosen to only focus on one year (namely 2020), as we expect the topics of interest, as well as the prominent people to vary from one year to another.\n",
+    "\n",
+    "We expect basically all the media to talk about coronavirus, so we need to make sure it does not act as a \"*great equalizer*\" that overshadows other differences between media.\n",
     "\n",
     "\n",
-    "**TODO: commenter la taille  É N O R M E  du dataset qu'on a?**  \n",
-    "**TODO: refine last paragraph**\n",
-    "After getting all those features, we use [Natural language processing](https://en.wikipedia.org/wiki/Natural_language_processing)-techniques (or NLP) to cluster media, and see what we find.\n",
-    "**TODO: expliquer pk on ne prend qu'une année. E.g. pcque les news changent bcp entre les années, esp with covid / different presidents, ...**"
+    "**TODO: commenter la taille  É N O R M E  du dataset qu'on a?**  "
    ]
   },
   {
@@ -87,13 +87,15 @@
    "id": "2763e549",
    "metadata": {},
    "source": [
-    "### 4.1: data-extension\n",
-    "Well for starters, the data we extract from the Quotebank-dataset look like this:"
+    "### 4.1: data-extension[^1]\n",
+    "Well for starters, the data we extract from the Quotebank-dataset look like this:\n",
+    "\n",
+    "[^1]: see file Wikidata_scraping.ipynb for more details"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "30d490d7",
    "metadata": {},
    "outputs": [],
@@ -112,14 +114,12 @@
    "source": [
     "As you can see, the owners of the media are not indicated here, so we need to extend our dataset with these features.  \n",
     "If we can't automatically find a journal's parent group, we decide to throw it away.\n",
-    "We also do so if the journals are lonely children. Indeed, we seek (**todo: above all/firstly**) to cluster them according to their parent groups, so isolated media are irrelevant.\n",
-    "\n",
-    "**TODO? \"see file Wikidata_scraping.ipynb\"**"
+    "We also do so if the journals are lonely children. Indeed, we seek (**todo: above all/firstly**) to cluster them according to their parent groups, so isolated media are irrelevant."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "e02032bc",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
     " * First, cluster according to which speakers are cited in it.\n",
     " * Second, cluster according to the text content of the extracted quotes.\n",
     " \n",
-    "**TODO: **\n",
+    "[^1]: see file \"Process_data.ipynb\" for more details  \n",
     "**TODO: do we speak about the distance metrics?**"
    ]
   },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65716287",
+   "id": "6ee489c9",
    "metadata": {},
    "source": [
     "#### TODO: why is it called \"US health\" and not just \"health\" in the notebook \"Analysis\"?\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c25d1846",
+   "id": "5100ecb3",
    "metadata": {},
    "source": [
     "We now focus only on the USA again:"
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f09682eb",
+   "id": "620476e8",
    "metadata": {},
    "source": [
     "As always, we try and identify the topics corresponding to the first axes:\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf89521e",
+   "id": "d3180d83",
    "metadata": {},
    "source": [
     "Visually, the bright green points really stand out.  \n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03247224",
+   "id": "d286c6e5",
    "metadata": {},
    "source": [
     "Let us remove this consortium from the analysis once again, and see what results we get:"
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "041e9aa2",
+   "id": "ed835165",
    "metadata": {},
    "source": [
     "The axes we identify are as follow:\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6603cade",
+   "id": "202f90a7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e942ca62",
+   "id": "37c0ebe1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91fcf2fc",
+   "id": "76ff1ae0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4071edab",
+   "id": "cbb6fc80",
    "metadata": {},
    "outputs": [],
    "source": []
