--- a/Website-notebook.ipynb
+++ b/Website-notebook.ipynb
@@ -30,7 +30,8 @@
    "id": "c9735eba",
    "metadata": {},
    "source": [
-    "# 1. Intro du sujet: TODO"
+    "# 1. Intro du sujet:\n",
+    "**TODO. see REDADME for a draft**"
    ]
   },
   {
@@ -58,10 +59,10 @@
     "\n",
     "We then augment this dataset using [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) to get the features we deemed necessary for our analysis.\n",
     "\n",
-    "**TODO?: refine this parag**\n",
+    "**TODO?: refine this paragraph**\n",
     "Finally after getting all those features, we use [Natural language processing](https://en.wikipedia.org/wiki/Natural_language_processing)-techniques (or NLP) to analyze our data, and understand the obtained results.  \n",
     "\n",
-    "### 3.2: Explanation of some of our choices (**TODO: and limitations?**)\n",
+    "### 3.2: Explanation of some of our choices (**TODO: and limitations/challenges?**)\n",
     "We have chosen to only focus on one year (namely 2020), as we expect the topics of interest, as well as the prominent people to vary from one year to another.\n",
     "\n",
     "We expect basically all the media to talk about coronavirus, so we need to make sure it does not act as a \"*great equalizer*\" that overshadows other differences between media.\n",
@@ -77,7 +78,7 @@
    "source": [
     "# 4. But more precisely, what did you do?:\n",
     "**TODO: est-ce qu'on veut tenter du test-training? parce que jusqu'ici on ne fait que du training, et je me demande s'ils vont vouloir pénaliser ça.**  \n",
-    "**TODO: ptetre train sur les $x$ premiers mois, puis test sur les $12-x$ derniers mois, comme ça on justifie l'utilité: en s'entraînant avec la data du début de l'année on a des résultats pour la fin de l'année.**. Pb avec ça: yearly events\n",
+    "**TODO: par ex train sur les $x$ premiers mois, puis test sur les $12-x$ derniers mois, comme ça on justifie l'utilité: en s'entraînant avec la data du début de l'année on a des résultats pour la fin de l'année.**. Pb avec ça: yearly events\n",
     "\n",
     "**TODO sur les graphes préciser que l'axe indiqué en premier correspond aux abscisses."
    ]
@@ -184,15 +185,16 @@
    "id": "b310d3b6",
    "metadata": {},
    "source": [
-    "**TODO: maybe a bit long?**\n",
+    "**TODO: maybe a bit long?**  \n",
     "Basically this method gives to each word a weight:\n",
     " * *proportional* to its number of occurences in d (term frequency)\n",
     " * and *inversely proportional* to its presence in the corpus (inverse document frequency)[^1]\n",
+    "[^1]: to quantify the 'presence' of a word in the corpus, we simply count the number of documents in which it occurs. We don't take its occurences per document into account here\n",
     "\n",
-    "The reasoning is that we use the **IDF** to **find** words **unique** to each document, or **remove recurrent** words, which we find in basically every document, and therefore don't bring any information (e.g. stopwords such as 'the' in a text).  \n",
+    "The reasoning is that we use the **IDF** to **find** words **unique** to each document, or **remove recurrent** words, which we find in basically every document, and therefore don't bring any information (e.g. stopwords such as 'the' in a text, or terms related to covid-19[^2]).  \n",
     "We use the **TF** to find words that **appear often**, as they may be **characteristic** of a particular document. For example the word 'brain' may often appear in a neuroscience paper, while not so much in a geography one.\n",
     "\n",
-    "[^1]: to quantify the 'presence' of a word in the corpus, we simply count the number of documents in which it occurs. We don't take its occurences per document into account here"
+    "[^2]: so this solves, or at least mitigates the issue mentione in "
    ]
   },
   {
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ee489c9",
+   "id": "d9bd4b6b",
    "metadata": {},
    "source": [
     "#### TODO: why is it called \"US health\" and not just \"health\" in the notebook \"Analysis\"?\n",
@@ -382,8 +384,6 @@
     "\n",
     "Our hypothesis seems verified, as there are still some geographical distinctions, but not as obvious from the graphs[^2], or as numerous as previously.  \n",
     "\n",
-    "**TODO: voir si ce que je dis sur le corona tient la route**  \n",
-    "Note the subhect \"US health\" that we identified as a min. It is to be expected, because \n",
     "**TODO: a word on why \"Sports\" is both a min and a max on different axes**  \n",
     "\n",
     "[^1]:we hypothesize American football in particular, but are not 100% certain.  \n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5100ecb3",
+   "id": "81115b0b",
    "metadata": {},
    "source": [
     "We now focus only on the USA again:"
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "620476e8",
+   "id": "e57c99f2",
    "metadata": {},
    "source": [
     "As always, we try and identify the topics corresponding to the first axes:\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3180d83",
+   "id": "4eddf4ab",
    "metadata": {},
    "source": [
     "Visually, the bright green points really stand out.  \n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d286c6e5",
+   "id": "35abb293",
    "metadata": {},
    "source": [
     "Let us remove this consortium from the analysis once again, and see what results we get:"
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed835165",
+   "id": "a33fc2cc",
    "metadata": {},
    "source": [
     "The axes we identify are as follow:\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "202f90a7",
+   "id": "ad107195",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37c0ebe1",
+   "id": "53c062a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76ff1ae0",
+   "id": "6b5ec7fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb6fc80",
+   "id": "aa7ca591",
    "metadata": {},
    "outputs": [],
    "source": []
